--- a/source/desktop/component/footer/footer.scss
+++ b/source/desktop/component/footer/footer.scss
@@ -1,60 +1,32 @@
 .site-footer {
-    margin-bottom: 10px;
-    border-top: 1px solid #ccc;
+    background: #1D4436;
+    padding: 37px 0;
 
-    >.row {
-        justify-content: space-between;
-        padding-top: 70px;
-        margin-bottom: 30px;
-        background: url(../img/top-decor.png) center top/1170px no-repeat;
-        position: relative;
-        z-index: -1;
-
-        &:nth-child(2) {
-            padding-top: 16px;
-            margin-bottom: 0;
-            background: url(../img/bottom-decor.png) center top/1170px no-repeat;
-        }
+    .container {
+        display: grid;
+        grid-template-columns: 164px 1fr;
+        gap: 160px;
     }
 
     .logo {
-        width: 230px;
-        height: 80px;
+        background: url(../img/logo-full.png) center center/164px no-repeat;
+        width: 164px;
+        height: 60px;
         display: block;
-        margin: 0 auto;
-        background: url(../img/logo.png) center center/230px no-repeat;
-        font-size: 0;
-        margin-right: 30px;
-    }
-
-    .info {
-        >* {
-            font-size: 15px;
-            font-weight: $font-weight-normal;
-            line-height: 22.5px;
-            margin-top: 8px;
-            color: #495057;
-
-            &:first-child {
-                margin-top: 0;
-            }
-
-            .bold {
-                font-weight: $font-weight-semibold;
-            }
-        }
-
-        &.align-left {
-            text-align: end;
-        }
     }
 
     .text {
-        font-size: 15px;
-        color: #6C757D;
-        text-transform: uppercase;
-        line-height: 22.5px;
-        text-align: center;
-        width: 100%;
+        >* {
+            color: var(--gray-white, #FFF);
+            font-family: "PoppinsZ";
+            font-size: 14px;
+            font-weight: $font-weight-medium;
+            margin-bottom: 8px;
+
+            >* {
+                margin-bottom: 0;
+            }
+        }
+
     }
 }
