--- a/source/desktop/scss/desktop.scss
+++ b/source/desktop/scss/desktop.scss
@@ -43,7 +43,7 @@
 // INFO : style for box-style
 // ----------------------------------
 // @import '../component/box-style/box-default/box-default.scss';
-@import '../component/box-style/timeline/timeline.scss';
+// @import '../component/box-style/timeline/timeline.scss';
 // @import '../component/box-style/abf-homepage/abf-homepage.scss';
 // @import '../component/box-style/topics/topics.scss';
 // @import '../component/box-style/multimedia/multimedia.scss';
@@ -51,5 +51,10 @@
 // @import '../component/box-style/story/story.scss';
 // @import '../component/box-style/abf-cate/abf-cate.scss';
 // @import '../component/box-style/suggest/suggest.scss';
-@import '../component/box-style/list-epaper/list-epaper.scss';
+// @import '../component/box-style/list-epaper/list-epaper.scss';
 // @import '../component/box-style/location/location.scss';
+@import '../component/box-style/chapter-one/chapter-one.scss';
+@import '../component/box-style/chapter-two/chapter-two.scss';
+@import '../component/box-style/chapter-three/chapter-three.scss';
+@import '../component/box-style/chapter-four/chapter-four.scss';
+@import '../component/box-style/chapter-five/chapter-five.scss';
