--- a/source/desktop/component/header/header.scss
+++ b/source/desktop/component/header/header.scss
@@ -1,415 +1,85 @@
 .site-header {
-    background: #fff;
-    z-index: 2;
-    position: relative;
-
-
-    .content-header {
-        padding: 20px 0;
-        margin: 0 auto;
-
-        .logo {
-            width: 320px;
-            height: 110px;
-            display: block;
-            margin: 0 auto;
-            background: url(../img/logo.png) center center/320px no-repeat;
-            font-size: 0;
-        }
-    }
-
-    .navigation {
-        background: $primary;
-        width: 100%;
-
-        .menu {
-            margin: 0 auto;
-            max-width: 1170px;
-            display: flex;
-            align-items: center;
-
-            >li {
-                position: relative;
-
-                >a {
-                    text-transform: uppercase;
-                    color: #FFFFFF;
-                    font-size: 16px;
-                    font-family: $font-family-branch;
-                    display: block;
-                    padding: 8px 11px;
-                    position: relative;
-                    height: 40px;
-
-                    &.active,
-                    &:hover {
-                        &::after {
-                            position: absolute;
-                            content: "";
-                            bottom: -1px;
-                            width: 40px;
-                            height: 4px;
-                            background: #fff;
-                            border-radius: 2px 2px 0 0;
-                            left: 50%;
-                            transform: translateX(-50%);
-                        }
-                    }
-
-                }
-
-                &:hover .sub-menu {
-                    display: block;
-                }
-
-                &:last-child {
-                    margin-left: auto;
-                }
-            }
-
-            .ic-menu,
-            .ic-home {
-                font-size: 0;
-                display: flex;
-
-                &::before {
-                    font-size: 20px;
-                    color: #fff;
-                }
-
-            }
-
-            .sub-menu {
-                display: none;
-                position: absolute;
-                top: 40px;
-                width: 150px;
-                background: #fff;
-                z-index: 9999;
-                box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-                padding-left: 0;
-
-                a {
-                    padding: 6px 10px;
-                    font-size: 16px;
-                    display: block;
-                    transition: all 0.2s;
-                    text-transform: uppercase;
-                    font-family: $font-family-branch;
-
-                    &.active,
-                    &:hover {
-                        color: #fff;
-                        background: $primary;
-                    }
-                }
-            }
-
-            .extend {
-                position: inherit;
-            }
-        }
-
-        &.fixed {
-            position: fixed;
-            top: 0;
-            left: 0;
-        }
-
-        &.w {
-            @media (min-width: $lg) {
-                width: calc(100% - 17px);
-            }
-        }
-    }
-
-    .big-menu-horizontal {
-        display: none;
-        background: #fff;
-        width: calc(100vw - 17px);
-        left: 0;
-        position: absolute;
-
-        .content {
-            max-width: 1170px;
-            padding: 40px 0 60px;
-            margin: 0 auto;
-            max-height: 800px;
-            overflow-Y: scroll;
-            display: flex;
-            flex-wrap: wrap;
-
-            &::-webkit-scrollbar {
-                width: 4px;
-                opacity: 0.5;
-                background: #fff;
-                border-radius: 4.5px;
-            }
-
-            &::-webkit-scrollbar-track {
-                background: #fff;
-            }
-
-            &::-webkit-scrollbar-thumb {
-                background: #ccc;
-                border-radius: 10px;
-            }
-
-            >* {
-                width: 269px;
-                margin-right: 30px;
-                margin-top: 50px;
-
-                &:nth-child(4n+4) {
-                    margin-right: 0;
-                }
-
-                &:nth-child(-n+4) {
-                    margin-top: 0;
-                }
-            }
-        }
-
-        .item {
-            .title {
-                font-weight: $font-weight-semibold;
-                font-family: $font-family-branch;
-                font-size: 16px;
-                line-height: 20px;
-                text-transform: uppercase;
-                color: #495057;
-
-                &:hover {
-                    color: #343A40;
-                }
-            }
-
-            li {
-                margin-top: 12px;
-
-                &:first-child {
-                    margin-top: 0;
-                }
-            }
-
-            a {
-                font-weight: $font-weight-normal;
-                font-size: 14px;
-                line-height: 22px;
-                color: #343A40;
-                display: block;
-
-                &:hover {
-                    color: $primary;
-                }
-            }
-        }
-
-        &.show {
-            display: block;
-        }
-    }
-
-    .big-menu-vertical {
-        width: 300px;
-        height: 100vh;
-        border-left: 1px solid #dee2e6;
-        box-shadow: 3px 2px 4px rgba(0, 0, 0, .1);
-        position: fixed;
-        top: 0;
-        z-index: 9999;
-        background: #fff;
-        display: none;
-        padding: 30px 16px;
-        overflow-y: scroll;
-
-        &::-webkit-scrollbar-track {
-            -webkit-box-shadow: inset 0 0 4px #fff;
-            border-radius: 6px;
-            background-color: #fff;
-        }
-
-        &::-webkit-scrollbar {
-            width: 4px;
-            background: #CED4DA;
-        }
-
-        &::-webkit-scrollbar-thumb {
-            border-radius: 4px;
-            background-color: #CED4DA;
-        }
-
-        >li {
-            margin-top: 10px;
-            min-height: 40px;
-
-            &:first-child {
-                margin-top: 0;
-            }
-
-            >a {
-                font-weight: $font-weight-medium;
-                font-size: 16px;
-                line-height: 20px;
-                text-transform: uppercase;
-                color: #231F20;
-                float: left;
-                margin-left: auto;
-                width: calc(100% - 40px);
-                padding: 10px 0;
-            }
-
-            [class*="ic-"] {
-                margin-left: auto;
-                width: 40px;
-                height: 40px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                cursor: pointer;
-                transition: 0.5s;
-                float: left;
-            }
-
-            .ic-up {
-                transform: rotate(-180deg);
-            }
-
-            .sub-menu {
-                clear: both;
-                background: #F5F5F5;
-                border-top: 1px solid #DEE2E6;
-                border-bottom: 1px solid #DEE2E6;
-                margin: 0 -16px;
-                padding: 10px 16px;
-                display: none;
-
-                a {
-                    font-size: 14px;
-                    line-height: 160%;
-                    display: block;
-                    padding: 6px 0;
-                }
-            }
-        }
-
-        .close {
-            border-bottom: 1px solid #DEE2E6;
-            display: flex;
-            align-items: center;
-            justify-content: end;
-
-            .ic-close {
-                background-color: lightblue;
-            }
-        }
-    }
-}
-
-.show-menu {
-    overflow: hidden;
-
-    @media (min-width: $lg) {
-        padding-right: 17px;
-    }
-}
-
-.backdrop {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .5);
-    z-index: 0;
-}
-
-.site-header-extend {
-    height: 50px;
-    background: $primary;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 15px 100px 10px 100px;
+    height: 60px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 8px;
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 999;
+    gap: 0 40px;
+    z-index: 1;
 
-    .back {
-        background: #FFFFFF;
-        border-radius: 6px;
-        padding: 4px 12px;
+    &::before {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url(../img/mask-header.png) center center no-repeat;
+        z-index: -1;
+    }
+
+    .nhandan-logo {
+        background: url(../img/logo.png) center center/135px no-repeat;
+        width: 135px;
+        height: 36px;
+        font-size: 0;
+        margin-right: auto;
+    }
+
+    .ocop-logo {
+        background: url(../img/ocop.png) center center/63px no-repeat;
+        width: 63px;
+        height: 30px;
+        font-size: 0;
+    }
+
+    .menu {
+        display: flex;
+        gap: 40px;
+
+        a {
+            color: var(--gray-white, #FFF);
+            font-family: "PoppinsZ";
+            font-size: 16px;
+            font-weight: $font-weight-medium;
+            line-height: 30px;
+            text-transform: uppercase;
+        }
+    }
+
+    .search {
         display: flex;
         align-items: center;
-        font-weight: $font-weight-semibold;
-        font-size: 16px;
-        line-height: 25px;
-        text-transform: uppercase;
-        color: #343A40;
+        position: relative;
+
+        input {
+            border: none;
+            outline: none;
+            background: #eeeeee21;
+            height: 30px;
+            padding: 0 10px;
+        }
 
         [class*="ic-"] {
-            margin-right: 16px;
+            position: absolute;
+            right: 0;
 
             &::before {
-                content: "\e901";
-                color: #000;
+                position: relative;
+                top: 1px;
+                font-size: 25px;
+                color: #fff;
             }
         }
     }
+}
 
-    .text {
-        font-family: $font-family-branch;
-        font-weight: $font-weight-normal;
-        font-size: 28px;
-        line-height: 41px;
-        text-transform: uppercase;
-        color: #FFFFFF;
-        position: relative;
-        background: $primary;
-        padding: 0 16px;
-
-        &::after {
-            right: -52px;
-        }
-
+.home-page {
+    .site-header {
         &::before {
-            left: -16px;
-        }
-
-        &::after,
-        &::before {
-            position: absolute;
-            content: "";
-            width: 35px;
-            height: 1px;
-            background: #fff;
-            top: 50%;
-            // left: -16px;
-            transform: translateX(-50%);
-            z-index: 0;
-        }
-    }
-
-    .gg-news {
-        font-weight: $font-weight-medium;
-        font-size: 13px;
-        color: #e21f26;
-        padding: 16px;
-        background: #fff3cd;
-        border-radius: 20px;
-        height: 31px;
-        display: flex;
-        align-items: center;
-
-        >* {
-            &:first-child {
-                margin-right: 6px;
-            }
+            background: linear-gradient(180deg, rgba(0, 0, 0, .7) 0, rgba(0, 0, 0, 0) 100.27%);
         }
     }
 }
