--- a/source/desktop/scss/_styles.scss
+++ b/source/desktop/scss/_styles.scss
@@ -88,24 +88,29 @@ a:hover {
 }
 
 .more-news {
-    background: $primary;
-    border: 1px solid $border-color;
-    border-radius: 6px;
-    padding: 12px 70px;
-    font-weight: $font-weight-medium;
-    font-size: 18px;
-    line-height: 26px;
+    border-radius: 50px;
+    border: 1px dashed #5B8C51;
+    background: #FFF;
+    width: fit-content;
+    padding: 10px 50px;
+    color: #5B8C51;
+    text-align: center;
+    font-family: "PoppinsZ";
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 28px;
     text-transform: uppercase;
-    color: $white;
-    display: flex;
     margin: 0 auto;
-    margin-top: 50px
+    display: flex;
 }
 
 .list-chapter {
     position: fixed;
     top: 340px;
     right: 35px;
+    z-index: 1;
+    display: grid;
+    gap: 15px;
 
     >* {
         display: flex;
@@ -116,31 +121,24 @@ a:hover {
         border-radius: 50%;
         background: #FFF;
         box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+        font-size: 0;
         cursor: pointer;
+
+        &:nth-child(1) {
+            background: #fff url(../img/ocop-3.png) center center no-repeat;
+        }
+
+        &:nth-child(4) {
+            background: #fff url(../img/item5.png) center center/28px no-repeat;
+        }
     }
 }
 
 [class*="chapter-"] {
-    height: 800px;
-    margin-bottom: 200px;
-}
+    min-height: 100vh;
+    margin-bottom: 400px;
 
-.chapter-one {
-    background-color: lightblue;
-}
-
-.chapter-two {
-    background-color: lightcoral;
-}
-
-.chapter-three {
-    background: lightgoldenrodyellow;
-}
-
-.chapter-four {
-    background: lightgreen;
-}
-
-.chapter-five {
-    background: lightsalmon;
+    &:last-child {
+        margin-bottom: 0;
+    }
 }
