--- a/source/desktop/component/detail-page/article-header/article-header.html
+++ b/source/desktop/component/detail-page/article-header/article-header.html
@@ -1,37 +1,27 @@
 <div class="article__sub-title">
-    Sự sống bí ẩn trong khói núi lửa dưới biển sâu
+  Sự sống bí ẩn trong khói núi lửa dưới biển sâu
 </div>
-<div class="article__title">
-    Viện Vi sinh vật biển Max Planck phát hiện một loài bất thường đang phát triển mạnh nhờ hydro ở độ sâu hơn 2500 m
-    dưới băng biển Bắc Cực.
-</div>
+<div class="article__title">Kinh nghiệm đi mùa lúa chín Sapa mới nhất 2022</div>
 <div class="article__meta">
-    <div class="row">
-        <span class="author"><i class="ic-pen"></i> Hoàng Thu</span>
-        <time class="time"><i class="ic-calendar"></i> Thứ sáu, ngày 17/09/2021 -
-            11:16</time>
-    </div>
-    <div class="row">
-        <iframe
-        src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;width=120&amp;layout=button&amp;action=like&amp;size=small&amp;share=true&amp;height=65&amp;appId"
-        width="120" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-        allowfullscreen="true"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-        <div class="social">
-            <a href="" class="zl">zl</a>
-            <a href="" class="tw">tw</a>
-            <a href="" class="print">tw</a>
-            <a href="" class="mail">tw</a>
-        </div>
-        <a class="gg-news" href="#">
-            <span>Theo dõi Báo ABC trên</span>
-            <img src="../styles/img/gg-news.png" alt="">
-        </a>
-    </div>
+  <time class="time">Thứ ba, ngày 25/10/2022 - 10:30</time>
+  <div class="social">
+    <a href="" class="fb">fb</a>
+    <a href="" class="yt">yt</a>
+    <a href="" class="x">x</a>
+    <a href="" class="email">tw</a>
+  </div>
+</div>
+<div class="article__avatar">
+  <figure class="max-width">
+    <img src="https://source.unsplash.com/random/1500x394?sig=1" alt="" />
+    <figcaption>figure outset-right</figcaption>
+  </figure>
 </div>
 <div class="article__sapo">
-    Vùng nước sâu tối tăm và lạnh giá, nhưng dễ bùng nổ do hoạt động của núi lửa ngầm có vẻ không
-    phải là nơi thích hợp cho sự sống. Tuy nhiên, một khám phá mới được công bố trên tạp chí Nature hôm 9/3 đã gây kinh
-    ngạc cho các nhà khoa học.
+  Nhắc đến Sapa chúng ta thường nghĩ ngay đến xứ sở sương mù xinh đẹp nhưng lại
+  quên mất rằng nơi đây còn khiến bao người phải say đắm, đổ gục trước vẻ đẹp
+  của cánh đồng lúa chín đẹp đến nao lòng. Du lịch Sapa mùa lúa chín chắc chắn
+  sẽ có nhiều trải nghiệm thú vị cho du khách. Hãy cùng Tico Travel tìm hiểu xem
+  mùa lúa chín Sapa có gì mà lại làm mọi người say đắm đến vậy nhé!
 </div>
 @@include("../audio/audio.html")
