--- a/source/desktop/component/detail-page/longform/longform.scss
+++ b/source/desktop/component/detail-page/longform/longform.scss
@@ -70,7 +70,7 @@
             }
         }
 
-        .breadcrumbs,
+        .breadcrumb,
         .article__sub-title,
         .article__title,
         .article__sapo {
