--- a/source/desktop/component/header/header.html
+++ b/source/desktop/component/header/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <a href="" class="nhandan-logo">nhandan-logo</a>
+  <a href="index.html" class="nhandan-logo">nhandan-logo</a>
   <a href="" class="ocop-logo">ocop-logo</a>
   <ul class="menu">
     <li><a href="">tin tức</a></li>
