--- a/source/desktop/component/detail-page/article-body/content-body/_source.html
+++ b/source/desktop/component/detail-page/article-body/content-body/_source.html
@@ -1,5 +1,5 @@
 <div class="article__source">
-    <p class="name">Nguồn công thương</p>
+    <p class="name">Link bài gốc:</p>
     <a href="" class="text">
         https://congthuong.vn/nhung-giam-doc-doanh-nghiep-nao-o-nghe-an-bi-tam-hoan-xuat-canh-245331.html</a>
 </div>
