--- a/source/desktop/component/detail-page/article-header/article-header.scss
+++ b/source/desktop/component/detail-page/article-header/article-header.scss
@@ -1,9 +1,9 @@
 .article {
     >* {
-        margin-top: 20px;
+        margin-bottom: 20px;
 
-        &:first-child {
-            margin-top: 0;
+        &:last-child {
+            margin-bottom: 0;
         }
     }
 
@@ -15,128 +15,57 @@
     }
 
     &__title {
+        color: var(--gray-black, #000);
+        font-family: "PoppinsZ";
+        font-size: 40px;
         font-weight: $font-weight-semibold;
-        font-size: 36px;
-        line-height: 48px;
-        color: #212529;
+        line-height: 130%;
     }
 
     &__meta {
-        .row {
-            display: flex;
-            align-items: center;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-bottom: 15px;
+        border-bottom: 1px solid #E9ECEF;
 
-            >* {
-                height: 20px;
-                display: flex;
-                align-items: center;
-                font-size: 16px;
-                line-height: 23px;
-                color: #6C757D;
-                margin-left: 40px;
-
-                &:first-child {
-                    margin-left: 0;
-                }
-
-                [class*="ic-"] {
-                    margin-right: 10px;
-
-                    &::before {
-                        font-size: 24px;
-                    }
-                }
-            }
-
-            .time {
-                margin-right: auto;
-            }
-
-            &:nth-child(2) {
-                padding-top: 10px;
-                margin-top: 10px;
-                border-top: 1px solid #E9ECEF;
-            }
-        }
-
-        .social {
-            display: flex;
-            align-items: center;
-            margin-left: 10px;
-
-            >* {
-                width: 24px;
-                height: 24px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                border-radius: 50%;
-                background: #ccc;
-                font-size: 0;
-                margin-left: 10px;
-
-                &:first-child {
-                    margin-left: 0;
-                }
-            }
-
-            .zl {
-                background: #03a5fa url(../img/zl.png) center right 6px/10px no-repeat;
-            }
-
-            .tw {
-                background: #00acee url(../img/tw2.png) center left 5px/16px no-repeat;
-            }
-
-            .print {
-                background: $primary;
-
-                &::before {
-                    content: "\e926";
-                    font-family: "icomoon";
-                    font-size: 14px;
-                    color: #fff;
-                }
-            }
-
-            .mail {
-                background: $primary;
-
-                &::before {
-                    content: "\e90d";
-                    font-family: "icomoon";
-                    font-size: 16px;
-                    color: #fff;
-                }
-            }
-        }
-
-        .gg-news {
-            font-weight: $font-weight-medium;
-            font-size: 13px;
-            color: #e21f26;
-            padding: 16px;
-            background: #fff3cd;
-            border-radius: 20px;
-            margin-left: auto;
-
-            >* {
-                &:first-child {
-                    margin-right: 6px;
-                }
-            }
-        }
-
-        iframe {
-            margin-left: auto;
+        .time {
+            color: var(--gray-600, #6C757D);
+            font-family: "PoppinsZ";
+            font-size: 16px;
+            line-height: 160%;
         }
     }
 
     &__sapo {
-        font-size: 19px;
-        font-weight: $font-weight-semibold;
-        color: #000000;
-        line-height: 28px;
+        color: var(--gray-800, #343A40);
+        font-family: "PoppinsZ";
+        font-size: 18px;
+        font-weight: $font-weight-medium;
+        line-height: 150%;
+    }
+
+    &__avatar {
+        text-align: center;
+
+        img {
+            width: auto;
+            max-width: 100%;
+        }
+
+        figcaption {
+            color: var(--gray-600, #6C757D);
+            text-align: center;
+            line-height: 150%;
+            padding-top: 8px;
+        }
+    }
+
+    &__sapo,
+    .audio {
+        max-width: 640px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
 }
