--- a/source/desktop/component/header/header.scss
+++ b/source/desktop/component/header/header.scss
@@ -3,7 +3,7 @@
     height: 60px;
     display: flex;
     align-items: center;
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     gap: 0 40px;
