--- a/source/desktop/scss/_layout.scss
+++ b/source/desktop/scss/_layout.scss
@@ -3,4 +3,42 @@
     min-width: var(--container);
     margin-right: auto;
     margin-left: auto;
+
+    // >* {
+    //     margin-bottom: var(--gutter);
+
+    //     &:last-child {
+    //         margin-bottom: 0;
+    //     }
+    // }
+}
+
+.site-body {
+    margin-top: 60px;
+    padding-bottom: 100px;
+}
+
+.grid-one {
+    display: grid;
+    grid-template-columns: 270px 1fr;
+    gap: 50px;
+
+}
+
+.col {
+    display: grid;
+    grid-template-columns: 1fr 300px;
+    gap: 60px;
+
+    .main-col,
+    .sub-col {
+        >* {
+            margin-bottom: var(--gutter);
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+
 }
