--- a/source/desktop/component/box-style/related-news/related-news.html
+++ b/source/desktop/component/box-style/related-news/related-news.html
@@ -1,4 +1,4 @@
-<div class="related-news">
+<div class="box-related-news">
     <div class="container">
         <h3 class="box-heading">
           <a href="" class="title">Tin liên quan</a>
