--- a/source/desktop/component/detail-page/article-body/article-body.html
+++ b/source/desktop/component/detail-page/article-body/article-body.html
@@ -10,16 +10,17 @@
   @@include('./content-body/_old-style.html')
   @@include('./content-body/_article-relate.html')
   @@include('../interview/interview.html') @@include('../live/live.html')
-  <!-- @@include('./content-body/_related-news.html') -->
   @@include('./content-body/_source.html')
   @@include('./content-body/_author.html')
   @@include('./../longform/longform.html')
 </div>
 @@include('./content-body/_tags.html')
 <div class="article__meta social">
+  <a href="" class="print">print</a>
+  <a href="" class="email">email</a>
   <a href="" class="fb">fb</a>
   <a href="" class="yt">yt</a>
   <a href="" class="x">x</a>
-  <a href="" class="email">tw</a>
 </div>
+@@include('./content-body/_related-news.html')
 @@include('../comment/comment.html')
