--- a/source/desktop/component/box-style/product-briefing/product-briefing.html
+++ b/source/desktop/component/box-style/product-briefing/product-briefing.html
@@ -1,5 +1,38 @@
 <div class="product-briefing">
-  <div class="images"></div>
+  <div class="product-img">
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="https://source.unsplash.com/featured/560x560?sig=1" />
+        </div>
+        <div class="swiper-slide">
+          <img src="https://source.unsplash.com/featured/560x560?sig=2" />
+        </div>
+        <div class="swiper-slide">
+          <img src="https://source.unsplash.com/featured/560x560?sig=3" />
+        </div>
+        <div class="swiper-slide">
+          <img src="https://source.unsplash.com/featured/560x560?sig=4" />
+        </div>
+      </div>
+    </div>
+    <div class="swiper mySwiper2">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="https://source.unsplash.com/featured/560x560?sig=1" />
+        </div>
+        <div class="swiper-slide">
+          <img src="https://source.unsplash.com/featured/560x560?sig=2" />
+        </div>
+        <div class="swiper-slide">
+          <img src="https://source.unsplash.com/featured/560x560?sig=3" />
+        </div>
+        <div class="swiper-slide">
+          <img src="https://source.unsplash.com/featured/560x560?sig=4" />
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="infor">
     <p class="title">Dừa sáp sợi-VICOSAP</p>
     <div class="group-star">
