--- a/source/desktop/component/box-style/related-news/related-news.scss
+++ b/source/desktop/component/box-style/related-news/related-news.scss
@@ -1,4 +1,4 @@
-.related-news {
+.box-related-news {
     background: url(../img/item11.png) top center/100% auto no-repeat;
     padding-top: 30px;
 
@@ -14,7 +14,7 @@
         font-size: 40px;
         text-transform: uppercase;
         padding-bottom: 30px;
-        background: url(../img/item10.png) center bottom -10px/70px no-repeat;
+        background: url(../img/item10.png) center bottom/70px no-repeat;
         text-align: center;
         margin-bottom: 13px;
     }
