--- a/source/desktop/component/box-style/timeline/timeline.scss
+++ b/source/desktop/component/box-style/timeline/timeline.scss
@@ -1,56 +1,49 @@
 .timeline {
     .box-heading {
-        margin-bottom: 16px;
+        margin-bottom: 20px;
     }
 
-    .title {
-        font-weight: $font-weight-normal;
-        font-size: 25px;
-        line-height: 37px;
-        font-family: $font-family-branch;
-        text-transform: uppercase;
-        color: #000000;
-    }
+    @include title;
 
     .story {
-        margin-top: 30px;
-        padding-top: 30px;
-        border-top: 1px solid #E9ECEF;
+        margin-bottom: var(--gutter);
+        padding-bottom: var(--gutter);
+        border-bottom: 1px solid $border-color;
 
-        &:first-child {
-            margin-top: 0;
-            padding-top: 0;
-            border-top: none;
+        &:last-child {
+            margin-bottom: 0;
+            padding-bottom: 0;
+            border-bottom: none;
         }
 
         &__thumb {
+            width: 240px;
+            height: 160px;
             float: left;
             margin-right: 30px;
-            width: 330px;
-            height: 220px;
-
         }
 
-        &__heading a {
-            font-size: 24px;
-            line-height: 35px;
-        }
+        &__heading {
+            margin-bottom: 5px;
 
-        &__meta {
-            margin-top: 10px;
-
-            .time {
+            a {
+                color: var(--gray-900, #212529);
+                font-family: "PoppinsZ";
+                font-size: 20px;
                 font-weight: $font-weight-medium;
-                font-size: 13px;
-                line-height: 24px;
-                color: #ADB5BD;
             }
         }
 
+
         &__summary {
-            margin-top: 10px;
-            font-size: 15px;
-            color: #6C757D;
+            color: var(--gray-700, #495057);
+            font-family: "PoppinsZ";
+            font-size: 16px;
+            line-height: 26px;
         }
+    }
+
+    .more-news {
+        margin-top: 70px;
     }
 }
