--- a/source/desktop/component/detail-page/comment/comment.scss
+++ b/source/desktop/component/detail-page/comment/comment.scss
@@ -1,16 +1,15 @@
 .article__comment {
-    margin-top: 30px;
-    padding-top: 34px;
+    margin-top: 40px;
     background: url(../img/top-decor.png) center top/1170px 10px no-repeat;
 
     .box-heading {
         .title {
-            font-weight: $font-weight-normal;
-            font-size: 25px;
-            line-height: 37px;
+            color: #000;
+            font-family: "PoppinsZ";
+            font-size: 15px;
+            font-weight: $font-weight-medium;
+            line-height: 160%;
             text-transform: uppercase;
-            font-family: $font-family-branch;
-            color: #000000;
         }
     }
 
@@ -36,7 +35,7 @@
     }
 
     .btn-submit {
-        background: $primary url(../img/comment.png) center left 16px no-repeat;
+        background: $secondary url(../img/comment.png) center left 16px no-repeat;
         border-radius: 8px;
         font-weight: 600;
         font-size: 15px;
@@ -165,12 +164,14 @@
                 font-size: 18px;
                 line-height: 22px;
                 color: #212529;
+                margin-bottom: 12px;
             }
 
             .text {
-                font-size: 15px;
-                line-height: 22px;
                 color: #212529;
+                font-family: "PoppinsZ";
+                font-size: 15px;
+                line-height: 150%;
             }
 
             .action {
@@ -192,7 +193,7 @@
                     }
 
                     &.liked {
-                        color: $primary;
+                        color: #DC3545;
                     }
                 }
 
