--- a/source/desktop/scss/_story.scss
+++ b/source/desktop/scss/_story.scss
@@ -22,12 +22,14 @@
         a {
             display: flex;
             width: 100%;
+            height: 100%;
             transition: transform 0.5s ease-out 0.1s;
             transition: 0.5s;
         }
 
         img {
             width: 100%;
+            height: 100%;
             transition: transform 0.5s;
             text-indent: -9999px;
         }
