--- a/source/desktop/scss/desktop.scss
+++ b/source/desktop/scss/desktop.scss
@@ -43,7 +43,7 @@
 // INFO : style for box-style
 // ----------------------------------
 // @import '../component/box-style/box-default/box-default.scss';
-// @import '../component/box-style/timeline/timeline.scss';
+@import '../component/box-style/timeline/timeline.scss';
 // @import '../component/box-style/abf-homepage/abf-homepage.scss';
 // @import '../component/box-style/topics/topics.scss';
 // @import '../component/box-style/multimedia/multimedia.scss';
@@ -62,3 +62,6 @@
 @import '../component/box-style/product/product.scss';
 @import '../component/box-style/four-pack/four-pack.scss';
 @import '../component/box-style/product-briefing/product-briefing.scss';
+@import '../component/box-style/related-product/related-product.scss';
+@import '../component/box-style/onemain-multisub/onemain-multisub.scss';
+@import '../component/box-style/list-news/list-news.scss';
